@startuml

title __FIRSTTEST.APP's Class Diagram__\n

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.BuildConfig {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.Database_test {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.GameScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.HelpScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.LocationPickerActivity {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.LoginScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.MainScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.MapActivity {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.OptionsScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.Popup {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.RegisterScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.StatisticsScreen {
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.User {
    }
  }
  

  com.example.guesswhereapp.Database_test -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.GameScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.HelpScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.LocationPickerActivity .up.|> com.mapbox.android.core.permissions.PermissionsListener
  com.example.guesswhereapp.LocationPickerActivity .up.|> com.mapbox.mapboxsdk.maps.OnMapReadyCallback
  com.example.guesswhereapp.LocationPickerActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.LoginScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.MainScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.MapActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.OptionsScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.Popup -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.guesswhereapp.RegisterScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.StatisticsScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.User -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
